[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "cbor-diag"
version = "0.1.0"
autotests = true

[dependencies]
hex = "0.3.2"
nom = "4.0.0"
half = "1.1.2"
chrono = "0.4.5"
num = "0.2.0"
base64 = "0.9.2"
uri = "0.3.0"

[[test]]
name = "proptest"
required-features = ["proptest"]

[dependencies.separator]
git = "https://github.com/Nemo157/rust-separator"
branch = "128-ints"

[dependencies.proptest]
git = "https://github.com/Nemo157/proptest"
branch = "temp"
optional = true
features = ["derive"]

[dev-dependencies]
indoc = "0.2.6"

[dev-dependencies.pretty_assertions]
git = "https://github.com/Nemo157/rust-pretty-assertions"
branch = "prettier-multiline-strings"
